commit
Create README.md
message to author, help TBD

Signed-off-by: bartikons <naeris.bt@gmail.com>

just covering up Warning

Signed-off-by: bartikons <naeris.bt@gmail.com>

deleting interacted message

Signed-off-by: bartikons <naeris.bt@gmail.com>

Adding cleaner(now only self messages)

Signed-off-by: bartikons <naeris.bt@gmail.com>